Closed
Bug 212284
Opened 22 years ago
Closed 22 years ago
Adding a web site to allowed popup site list crashes Mozilla [@ nsPermissionManager::Add ]
Categories
(SeaMonkey :: Preferences, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jlp.bugs, Assigned: mvl)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
|
1.96 KB,
text/plain
|
Details | |
|
2.30 KB,
patch
|
mvl
:
review+
bzbarsky
:
superreview+
dbaron
:
approval1.5a+
|
Details | Diff | Splinter Review |
I'm using Mozilla 2003070908 on Windows XP with SP1. When I try to add some site
to a list of sites that are allowed to show popups Mozilla crashes. I sent 3
talkback reports: TB21772355E, TB21772352X, TB21772302H. I also noticed that
sites that are allowed to show popups are not listed in the Popup Manager.
Reproducable: allways
Steps to reproduce:
1. Open Mozilla
2. Go to Tools > Popup Manager > Manage popups
3. Enter some site. For example www.test.com
4. Click Add
5. Click OK
Actual result:
Mozilla crashes after clicking OK
Expected result:
Mozilla should add the site to the list and close the window.
Comment 1•22 years ago
|
||
wfm using build 2003070308 on Win2k, regression between 2003070308 and 2003070908.
Comment 2•22 years ago
|
||
Seeing those crash on a current based CVS trunk build - Linux.
So, it seems to be an OS->All problem.
| Reporter | ||
Updated•22 years ago
|
OS: Windows XP → All
| Reporter | ||
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•22 years ago
|
||
Updated•22 years ago
|
Keywords: stackwanted
Summary: Adding a web site to allowed popup site list crashes Mozilla → Adding a web site to allowed popup site list crashes Mozilla [@ nsPermissionManager::Add ]
Whiteboard: TB21772352X
| Assignee | ||
Comment 4•22 years ago
|
||
Forgot to check aType for a correct pointer. The popup manager used the old
nnumber version, instead of the string. Forgot to update that file.
Fixed that, and checking for a pointer now.
Updated•22 years ago
|
Attachment #127468 -
Flags: superreview+
| Assignee | ||
Comment 5•22 years ago
|
||
Comment on attachment 127468 [details] [diff] [review]
ptrcheck and update caller
<dwitte_away> mvl: r=dwitte for the NS_ENSURE_ARG and caller fix.
Marking as such.
Attachment #127468 -
Flags: review+
| Assignee | ||
Comment 6•22 years ago
|
||
Comment on attachment 127468 [details] [diff] [review]
ptrcheck and update caller
Requesting approval for this fix for a quite visible crash. That patch itself
is low-risk, mainly a few checks for correct pointers.
Attachment #127468 -
Flags: approval1.5a?
Attachment #127468 -
Flags: approval1.5a? → approval1.5a+
Updated•21 years ago
|
Product: Browser → Seamonkey
Updated•14 years ago
|
Crash Signature: [@ nsPermissionManager::Add ]
You need to log in
before you can comment on or make changes to this bug.
Description
•