Bug 212284: Adding a web site to allowed popup site list crashes Mozilla [@ nsPermissionManager::Add ]

fixing a crasher regression from yesterday's landing of bug 209475.

patch by mvl; r=dwitte, sr=bz, a=dbaron.